styling and configuring

--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ body {
 
 #header {
     text-align: center;
-    font-family: DragonFire;
+    font-family: BreatheFire;
     text-shadow: -1px 1px 0 #fff,
         1px 1px 0 #fff,
         1px -1px 0 #fff,
